fix(auth-back): delete refresh - strengthen delete method in RefreshService - add cookie domain + cors origins in applications.yml - update Cors config in SecurityConfig - add domain in methods generateCookie & clear